--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.github.simonebortolin:MaterialSearchBar:0.10'
+    implementation 'com.github.hsmnzaydn:imagezoom:1.3.0'
 
 }
